# management

./: .gitignore  LICENSE  README.md
.github/workflows/: go-gh-pages.yml
src/extract-team-images/: main.py  process-images.py  pyproject.toml
src/html-to-png/: convert-workshops.go  go.mod  main.go
src/open-workshops/: app.html  aree-invi.html  barathy-anjitha.html  bg-bokeh.base64  carlos-invi.html  go.mod  haley-brigi.html  index.html  julie-cole.html  julie-remi.html  kevin.html  kristine.html  liv-magnus.html  liv-mari.html  main.go  mike-naya.html  peter-naya.html  remi-santiago.html  rosa-santiago.html  sondre-eva.html  sondre-remi.html  template.html  testtemplate.go  two.html  workshop-1-Building-the-Basics-of-a-scene.html
src/show-program/: Makefile  drive.go  go.mod  go.sum  index.html  index.tmpl  main.go  photo.go  price.go  regular-fb.tmpl  regular-insta.tmpl  regular-sio-meetup.tmpl  regular-story.tmpl  regular.tmpl  show-page.tmpl  show.go  showlanguage.go  showtype.go
